# lowcode-scraper

./: README.md  pyproject.toml  requirements.txt
data/: base_reviews.jsonl
src/: lowcode_scraper.py  scrapiing_info_config.py
src/myscraper/: create_dataset.py  scraper.py  url_data.py
src/myscraper/utils/: jsonl.py  measure_exe_time.py  myurl.py
