[tool.poetry]
name = "lowcode-scraper"
version = "0.1.0"
description = "最低限の入力でスクレイピングを実行するツール"
authors = ["yuuuuukih <yh.works01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"
selenium = "^4.27.1"
beautifulsoup4 = "^4.12.3"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
